Implmentação da noticação, persistência em SQLite, consumindo mais uma API REST (2 no total, até este commit) e utilizando a api do google maps

--- a/Farmas/app/src/main/res/values-en/strings.xml
+++ b/Farmas/app/src/main/res/values-en/strings.xml
@@ -39,4 +39,7 @@
     <string name="login_invalido">Invalids login or password!</string>
     <string name="erro_validacao_cadastro">All fields are mandatory!</string>
     <string name="title_detalhes">Details</string>
+    <string name="menu_dados_empresa">Farma Online Data</string>
+    <string name="lbl_btn_open_maps">Click here to open on Maps</string>
+    <string name="message_notification">Know our promotions</string>
 </resources>
