--- a/Farmas/app/src/main/res/values/strings.xml
+++ b/Farmas/app/src/main/res/values/strings.xml
@@ -54,4 +54,7 @@
 
     <string name="message_notification">Aproveite nossas promoções</string>
 
+    <string name="menu_chamadas">Chamadas</string>
+
+
 </resources>
